2002-01-08  Richard Hestilow  <hestilow@ximian.com>

	* gnome-data: Added.

	* configure.in, Makefile.am: Add gnome-data subdir.

Mon Jan  7 20:40:09 2002  Jonathan Blandford  <jrb@redhat.com>

	* schemas/desktop_gnome_peripherals_keyboard.schemas: add
	custom_bell_sound.

	* schemas/desktop_gnome_peripherals_mouse.schemas: add
	locate_pointer value.
	* schemas/desktop_gnome_peripherals_keyboard.schemas: add
	bell_mode schema. change clickvolume to click_volume.
	* schemas/desktop_gnome_interface.schemas: add cursor_blink and
	cursor_blink_time.

2002-01-03  Bradford Hovinen  <hovinen@ximian.com>

	* schemas/Makefile.am (schema_DATA): Add background,
	peripherals_keyboard

2001-12-27  Duarte Loreto <happyguy_pt@hotmail.com>

        * configure.in: Added portuguese to ALL_LINGUAS

2001-12-23  Takayuki KUSANO  <AE5T-KSN@asahi-net.or.jp>

	* configure.in: Added "ja" to ALL_LINGUAS.

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* schemas/desktop_gnome_interface.schemas:

	Disable tearoff menus by default.

2001-12-18  jacob berkman  <jacob@ximian.com>

	* schemas/Makefile.am (install-data-local): don't do the schema
	rule if DESTDIR is set.  i can't think of a reason why this would
	be broken.

2001-12-17  jacob berkman  <jacob@ximian.com>

	* schemas/Makefile.am (EXTRA_DIST): add $(schama_DATA)

Fri Dec 14 16:20:16 2001  Jonathan Blandford  <jrb@redhat.com>

	* schemas: Move all GNOME schemas here.

2001-12-11  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Up to 1.108.0

2001-12-06  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* libgnome/gnome-program.c: Fix a typo in the API docs so they
	  now build correctly.

2001-11-28  jacob berkman  <jacob@ximian.com>

	* configure.in: install the schema into $DESTDIR

2001-11-27  Anders Carlsson  <andersca@gnu.org>

	* Makefile.am (SUBDIRS): Don't build tests directory.

	* configure.in: Up version to 1.107.0 and also up
	dependencies.

2001-11-18  Miles Lane  <miles@megapathdsl.net>
