@@ -202,6 +202,7 @@ AC_OUTPUT([
 Makefile
 po/Makefile.in
 libgnome/Makefile
+monikers/Makefile
 schemas/Makefile
 gnome-data/Makefile
 libgnome/libgnome-2.0.pc
