@@ -225,20 +225,6 @@ int main(int argc, char **argv) {
 @Returns: 
 
 
-<!-- ##### MACRO GNOME_PARAM_MODULE_INFO ##### -->
-<para>
-
-</para>
-
-
-
-<!-- ##### MACRO GNOME_PARAM_MODULES ##### -->
-<para>
-
-</para>
-
-
-
 <!-- ##### MACRO GNOME_PARAM_POPT_TABLE ##### -->
 <para>
 
