@@ -1,7 +1,7 @@
 <oaf_info>
 
-<oaf_server iid="OAFIID:Bonobo_Moniker_extra_Factory"
-        type="shlib" location="@MONIKER_LIBDIR@/libmoniker_extra_2.so">
+<oaf_server iid="OAFIID:GNOME_Moniker_std_Factory"
+        type="shlib" location="@MONIKER_LIBDIR@/libmoniker_std_2.so">
         <oaf_attribute name="repo_ids" type="stringv">
                 <item value="IDL:Bonobo/GenericFactory:1.0"/>
         </oaf_attribute>
@@ -9,8 +9,8 @@
         <oaf_attribute name="name" type="string" _value="Extra Moniker factory"/>
 </oaf_server>
 
-<oaf_server iid="OAFIID:Bonobo_Moniker_Config" type="factory"
-        location="OAFIID:Bonobo_Moniker_extra_Factory">
+<oaf_server iid="OAFIID:GNOME_Moniker_Config" type="factory"
+        location="OAFIID:GNOME_Moniker_std_Factory">
         <oaf_attribute name="repo_ids" type="stringv">
                 <item value="IDL:Bonobo/Moniker:1.0"/>
                 <item value="IDL:Bonobo/Unknown:1.0"/>
@@ -21,8 +21,8 @@
         </oaf_attribute>
 </oaf_server>
 
-<oaf_server iid="OAFIID:Bonobo_Moniker_ConfIndirect" type="factory"
-        location="OAFIID:Bonobo_Moniker_extra_Factory">
+<oaf_server iid="OAFIID:GNOME_Moniker_ConfIndirect" type="factory"
+        location="OAFIID:GNOME_Moniker_std_Factory">
         <oaf_attribute name="repo_ids" type="stringv">
                 <item value="IDL:Bonobo/Moniker:1.0"/>
                 <item value="IDL:Bonobo/Unknown:1.0"/>
