@@ -1,3 +1,7 @@
+2002-01-09  Michael Meeks  <michael@ximian.com>
+
+	* Makefile.am: add monikers.
+
 2002-01-08  Richard Hestilow  <hestilow@ximian.com>
 
 	* gnome-data: Added.
